--- a/style.css
+++ b/style.css
@@ -32,8 +32,14 @@ body {
 	width: 130px;
 }
 
-#menu-icon {
-  font-weight: bold;
+.hamburger-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  font-size: 24px; /* Ajuste o tamanho do ícone conforme necessário */
+  color: #333; /* Cor do ícone */
 }
 
 a, a:active, a:focus, a:visited {
@@ -267,3 +273,5 @@ section.apresentacao {
     font-size: 25px;
     color: #db392b;
 }
+
+
