--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .navbar {
 	padding-top: 0;
 	padding-bottom: 0;
-	height: 80px;
+	max-height: 80px;
 	background: rgba(255, 255, 255, 0.92);
 	z-index: 15;
 	top: 0;
@@ -32,16 +32,36 @@ body {
 	width: 130px;
 }
 
-#btn-hamburguer {
 
-}
-
-#menu-icon {
+.custon-icon {
   color: #000;
   font-size: 25px;
   font-weight: bold;
   box-shadow: #000;
 }
+
+.navbar-nav {
+  background-color: transparent; /* Cor de fundo inicial */
+  position: relative; /* Para posicionar o overlay dentro da navbar */
+}
+
+.navbar-nav::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0); /* Cor de fundo transparente (invisível inicialmente) */
+  z-index: -1; /* Coloque o overlay atrás das <li> e da <ul> */
+  transition: background-color 0.3s; /* Adicione uma transição suave para o efeito */
+}
+
+.navbar-toggler.hamburger-button:focus + .navbar-collapse .navbar-nav::before {
+  background-color: rgba(255, 255, 255, 0.7); /* Cor de fundo branca com transparência quando o botão é clicado */
+  z-index: 0; /* Coloque o overlay à frente das <li> e da <ul> quando o botão é clicado */
+}
+
 
 a, a:active, a:focus, a:visited {
 	color: #ff4f40;
