--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 html {
   scroll-behavior: smooth 1500ms;
+  overflow-x: hidden;
 }
 
 body {
@@ -19,7 +20,6 @@ body {
 	padding-bottom: 0;
 	height: 80px;
 	background: #fff;
-	/* background: red; */
 	z-index: 15;
 	top: 0;
 }
@@ -65,10 +65,11 @@ a.nav-link {
 }
 
 .header-home {
+  margin-top: 35px;
   margin-left: 20%;
   width: 60%;
   position: relative;
-  min-height: 500px; /* Defina a altura desejada para o cabeçalho */
+  min-height: 350px; /* Defina a altura desejada para o cabeçalho */
   background-image: url('images/wallpaper-home1.png'); 
   background-color: #fff;
   background-size: 100%;
@@ -82,9 +83,17 @@ a.nav-link {
   z-index: 2;
 }
 
+section.nome-projeto h1 {
+  font-size: 2rem;
+  padding-bottom: 100px;
+}
+
+section.apresentacao {
+	padding-bottom: 80px;
+}
+
 section.sobre {
-  width: 100%;
-  height: auto;
+	padding-bottom: 80px;
 }
 
 .container-seta {
@@ -136,12 +145,6 @@ section.sobre {
 
 .card-body :nth-child(1) {
   transition-delay: 1000ms;
-}
-
-
-section.apresentacao {
-	padding-top: 80px;
-	padding-bottom: 80px;
 }
 
 /*    TIME-LINE     */
