--- a/style.css
+++ b/style.css
@@ -65,11 +65,10 @@ a.nav-link {
 }
 
 .header-home {
-  margin-top: 35px;
-  margin-left: 20%;
-  width: 60%;
+  margin-top: 80px;
+  width: 100%;
   position: relative;
-  min-height: 350px; /* Defina a altura desejada para o cabeçalho */
+  height: 80vh; 
   background-image: url('images/wallpaper-home1.png'); 
   background-color: #fff;
   background-size: 100%;
@@ -83,7 +82,7 @@ a.nav-link {
   z-index: 2;
 }
 
-section.nome-projeto h1 {
+section.nome-projeto h3 {
   font-size: 2rem;
   padding-bottom: 100px;
 }
