--- a/style.css
+++ b/style.css
@@ -65,17 +65,14 @@ a.nav-link {
 }
 
 .header-home {
-  margin-top: 80px;
   width: 100%;
-  position: relative;
-  height: 80vh; 
-  background-image: url('images/wallpaper-home1.png'); 
-  background-color: #fff;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
+.header-home img {
+  padding-left: 20%;
+  width: 80%;
+  height: 70vh;
+}
 
 .header-home .container {
   position: relative;
