--- a/Atualizado - Mambubike/mambubike-copy/style.css
+++ b/Atualizado - Mambubike/mambubike-copy/style.css
@@ -88,7 +88,7 @@ a.nav-link {
 
 .header-home img {
   width: 100%;
-  height: 90vh;
+  height: 80vh;
 }
 
 .header-home .container {
@@ -98,7 +98,8 @@ a.nav-link {
 
 section.nome-projeto h3 {
   font-size: 2rem;
-  padding-bottom: 100px;
+  margin-top: -80px;
+  padding-bottom: 130px;
 }
 
 section.apresentacao {
