--- a/Atualizado - Mambubike/mambubike-copy/style.css
+++ b/Atualizado - Mambubike/mambubike-copy/style.css
@@ -258,6 +258,55 @@ section.sobre {
 } 
 
 
+.column{
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+/*//////////////////  PAGINA CONTATO  //////////////////*/
+.contact{
+	background: #647c84;
+	padding:6em 0em;
+	overflow: hidden;
+}
+.contact h3{
+  font-size: 2.5em;
+  font-weight: 400;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  margin: 0 auto;
+  border-bottom: 2px solid white;
+  width: 520px;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+}
+.contact p{
+	font-size:1.2em;
+	font-weight:400;
+	color: #ff6f5c;
+	margin:1em 0em 4em;
+	text-align:center;
+}
+
+.btn-contato {
+  background: #ff6f5c;
+	padding: 0.5em 3em;
+	color:#fff;
+	font-size: 19px;
+	border-radius:5px;
+	text-transform:uppercase;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.btn-contato:hover {
+  background: #ff8a7b;
+  color: #fff;
+}
+
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
